--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 
 <body>
     <h1>Hello API</h1>
+    <button onclick="loadData()">Load Data</button>
+    <button onclick="loadUser()">Load Users</button>
+    <button onclick="loadPost()">LoadPost</button>
+    <button onclick="loadAlbums()">loadAlbums</button>
 
     <script src="JS/app.js"></script>
+    <script src="JS/api.js"></script>
 </body>
 
 </html>
