Dynamic data call for API

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
 <body>
     <h1>Hello API</h1>
+    <ul id="users">
+
+    </ul>
     <button onclick="loadData()">Load Data</button>
-    <button onclick="loadUser()">Load Users</button>
+    <button onclick=" loadUser()">Load Users</button>
     <button onclick="loadPost()">LoadPost</button>
     <button onclick="loadAlbums()">loadAlbums</button>
 
